# easy-ai-summary-agent

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  gmail_auth.py  main.py  pyproject.toml
agent/: custom_route.py  graph.py  models.py  react_agent.ipynb  react_graph.py  search_tool.py  view_graphs.ipynb  workflow.py
document_assistant/: graph.py
react_hitl_agent/: api.py  db.py  graph.py  nodes.py  utils.py
reasoning_agent/: graph.py  nodes.py  react.py
